tests/specs/ecosystem/vicary/flushable_set/0_1_1.test
vicary/flushable-set/0.1.1
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Set<T>'.
  add(value: T): this {
  ~~~
    at file://<tmpdir>/FlushableSet.ts:40:3

